--- a/flask/flask_fundamentals/dojo_fruit_store/templates/checkout.html
+++ b/flask/flask_fundamentals/dojo_fruit_store/templates/checkout.html
@@ -24,7 +24,7 @@
         <section class="jumbotron text-center">
           <div class="container">
             <h1 class="jumbotron-heading">Thank you for your order!</h1>
-            <p class="lead text-muted">We ordered 5 items for you and charged your student account on {{now}}.</p>
+            <p class="lead text-muted">We ordered {{Sum}} items for you and charged your student account on {{Now}}.</p>
           </div>
         </section>
   
